--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,6 @@ __marimo__/
 
 .env
 .db
+SystemCode/DataScript/
+SystemCode/db/.env.googlecloudservice
+SystemCode/db/compact-harbor-475309-h1-7ac990971da7.json
