--- a/SystemCode/backend/.gitignore
+++ b/SystemCode/backend/.gitignore
@@ -1,27 +1,17 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# 虚拟环境
+.venv
+venv/
+env/
 
-# dependencies
-/node_modules
+# Python 缓存
+__pycache__/
+*.pyc
 
-# next.js
-/.next/
-/out/
+# 敏感的环境变量文件
+.env
 
-# production
-/build
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDE and OS files
+.idea/
+.vscode/
+.DS_Store
