--- a/SystemCode/backend/requirements.txt
+++ b/SystemCode/backend/requirements.txt
@@ -9,6 +9,8 @@ pydantic-settings==2.2.1
 # database
 sqlmodel==0.0.14
 psycopg2-binary==2.9.9
+asyncpg==0.29.0
+redis==5.0.1
 
 # env config
 python-dotenv==1.0.0
