--- a/SystemCode/backend/docker-compose.yml
+++ b/SystemCode/backend/docker-compose.yml
@@ -46,9 +46,10 @@ services:
       DATABASE_URL: postgresql://${DB_USER:-yilin}:${DB_PASSWORD:-qiyilin710}@postgres:5432/${DB_NAME:-irrs_dev}
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      PYTHONPATH: /app
     volumes:
       - .:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    # command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       postgres:
         condition: service_healthy
