--- a/SystemCode/backend/.devcontainer/devcontainer.json
+++ b/SystemCode/backend/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
                 "ms-python.vscode-pylance"
             ],
             "settings": {
-                "python.pythonPath": "/usr/local/bin/python3" 
+                "python.defaultInterpreterPath": "/usr/local/bin/python3" 
             }
         }
     }
