--- a/SystemCode/backend/requirements.txt
+++ b/SystemCode/backend/requirements.txt
@@ -8,10 +8,11 @@ pydantic-settings==2.4.0
 
 # database & ORM
 sqlmodel==0.0.14
-SQLAlchemy==2.0.44 #
+SQLAlchemy==2.0.44
 psycopg2-binary==2.9.9
 asyncpg==0.29.0
-geoalchemy2==0.17.0 #
+geoalchemy2==0.17.0
+greenlet==3.2.4
 
 # cache
 redis==5.0.1
