--- a/SystemCode/dataservice/sql_api/requirements.txt
+++ b/SystemCode/dataservice/sql_api/requirements.txt
@@ -2,5 +2,5 @@ geoalchemy2==0.17.0
 pydantic==2.12.3
 python-dotenv==1.1.1
 SQLAlchemy==2.0.44
-asyncpg==0.30.0
-greelet==3.2.4
+asyncpg==0.29.0
+greenlet==3.2.4
