--- a/SystemCode/backend/Dockerfile
+++ b/SystemCode/backend/Dockerfile
@@ -11,4 +11,4 @@ COPY . .
 EXPOSE 8000
 
 # docker 本地跑在容器里需注释掉
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
