--- a/SystemCode/backend/docker-compose.yml
+++ b/SystemCode/backend/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     volumes:
       - .:/app
     # docker 本地跑在容器里需注释掉
-    # command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload 
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload 
     depends_on:
       postgres:
         condition: service_healthy
