--- a/SystemCode/backend/.env.example
+++ b/SystemCode/backend/.env.example
@@ -1,11 +1,24 @@
-# PostgreSQL config
-DB_NAME=xxx
-DB_USER=xxx
-DB_PASSWORD=xxx
-
-# pgAdmin config
-PGADMIN_EMAIL=xxx
-PGADMIN_PASSWORD=xxx
-
 # openai
-OPENAI_API_KEY="xxx"
+OPENAI_API_KEY="replace_with_your_value_here"
+
+# cloud database
+CLOUD_DB_HOST=host.docker.internal
+CLOUD_DB_PORT=5433
+CLOUD_DB_USERNAME=replace_with_your_value_here
+CLOUD_DB_PASSWORD=replace_with_your_value_here
+CLOUD_DB_DATABASE=irrs_db
+
+# app database
+APP_DB_HOST=postgres
+APP_DB_PORT=5432
+APP_DB_USER=replace_with_your_value_here
+APP_DB_PASSWORD=replace_with_your_value_here
+APP_DB_NAME=irrs_app_db
+
+# pgAdmin
+PGADMIN_EMAIL=replace_with_your_value_here
+PGADMIN_PASSWORD=replace_with_your_value_here
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
