--- a/SystemCode/frontend/package.json
+++ b/SystemCode/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start -p ${PORT:-8080} -H 0.0.0.0"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
