--- a/SystemCode/backend/Dockerfile
+++ b/SystemCode/backend/Dockerfile
@@ -7,7 +7,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 8080
+# 关键：把 backend 目录加进 Python 搜索路径
+ENV PYTHONPATH="/app/SystemCode/backend:${PYTHONPATH}"
 
-# 用 --factory 调用 create_app，彻底规避导入期副作用问题
+EXPOSE 8080
 CMD ["python","-c","import os,uvicorn; uvicorn.run('main:create_app', factory=True, host='0.0.0.0', port=int(os.getenv('PORT','8080')), log_level='debug')"]
